modified script code

--- a/servicesure.html
+++ b/servicesure.html
@@ -421,6 +421,17 @@
 
     <!-- Slick Plugin -->
     <script src="js/slick.min.js"></script>
+    <script>
+        // Text Slider
+        $(".text-slider").slick({
+            autoplay: true,
+            autoplaySpeed: 5000,
+            infinite: false,
+            speed: 500,
+            dots: true,
+            arrows: false,
+        });
+    </script>
 
     <!-- Main Script Sheet -->
     <script src="js/script.js"></script>
