--- a/index.html
+++ b/index.html
@@ -486,6 +486,48 @@
 
     <!-- Slick Plugin -->
     <script src="js/slick.min.js"></script>
+    <script>
+        // Hero Slider
+        let heroSlider = $('.hero-slider');
+        heroSlider.on('init', function (e, slick) {
+            var $firstAnimatingElements = $('.slider-content:first-child').find('[data-animation]');
+            doAnimations($firstAnimatingElements);
+        });
+
+        heroSlider.on('beforeChange', function (e, slick, currentSlide, nextSlide) {
+            var $animatingElements = $('.slider-content[data-slick-index="' + nextSlide + '"]').find('[data-animation]');
+            doAnimations($animatingElements);
+        });
+
+        heroSlider.slick({
+            autoplay: true,
+            autoplaySpeed: 6000,
+            infinite: false,
+            speed: 500,
+            dots: false,
+            arrows: true,
+            fade: true,
+            cssEase: 'linear',
+            prevArrow: '.prev',
+            nextArrow: '.next',
+        });
+
+        function doAnimations(elements) {
+        var animationEndEvents = 'webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend';
+            elements.each(function () {
+                var $this = $(this);
+                var $animationDelay = $this.data('delay');
+                var $animationType = 'animated ' + $this.data('animation');
+                $this.css({
+                    'animation-delay': $animationDelay,
+                    '-webkit-animation-delay': $animationDelay
+                });
+                $this.addClass($animationType).one(animationEndEvents, function () {
+                    $this.removeClass($animationType);
+                });
+            });
+        }
+    </script>
 
     <!-- LightBox Plugin -->
     <script src="js/lightbox.min.js"></script>
